# flutter_rust_bridge_candle

./: .gitignore  README.md  pubspec.yaml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_candle/: MainActivity.kt
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
native/: Cargo.toml  Cargo_rust-bert_ko_libtorch.toml
native/src/: api.rs  api_t5.rs  bridge_generated.io.rs  bridge_generated.rs
native/src/api/: marian.rs
